# CPP-iz1-techpark_1_sem-

./: .travis.yml  CMakeLists.txt  README.md  main.c
include/: dz.h
project/include/: arabiantorome.h
project/src/: arabiantorome.c  main.c
src/: dz.c  lib.c  lib.h  main.c
tests/: main.cpp  mainTest.cpp  test.cpp
unit_tests/: myTests.cpp
